[gd_scene load_steps=7 format=2]

[ext_resource path="res://CharacterSprites/4900_Game_Project/4900 Game Project/All Sprites/Stage 1 Boss/Stage 1 Boss-Stand.png" type="Texture" id=1]
[ext_resource path="res://Stage_1_Boss.gd" type="Script" id=2]
[ext_resource path="res://Info_Textbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Info_Collider_Assets/keyboard_key_z.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 24 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 46.0

[node name="Stage_1_Boss" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9, -8 )
texture = ExtResource( 1 )

[node name="BossCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
shape = SubResource( 1 )

[node name="ZBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZBox"]
position = Vector2( -20, 0 )
shape = SubResource( 2 )

[node name="Info_Textbox" parent="." instance=ExtResource( 3 )]

[node name="ZBoxSprite" type="Sprite" parent="."]
position = Vector2( -5, -76 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="ZBox" to="." method="_on_ZBox_body_entered"]
[connection signal="body_exited" from="ZBox" to="." method="_on_ZBox_body_exited"]
